# ros_robot_model

./: CMakeLists.txt  README.md  package.xml
config/: joints.yaml
launch/: display.launch
rviz/: urdf_tutorial.rviz
shell/: spawn.sh
urdf/: robot_model.urdf
