<?xml version="1.0" encording="UTF-8"?>
<package format="2">
  <name>ros_robot_model</name>
  <version>0.0.0</version>
  <description>robot_modeling</description>

  <maintainer email="tamura.kosei@mail.kyutech.jp">Kose-i</maintainer>
  <author email="tamura.kosei905@mail.kyutech.jp">Kose-i</author>

  <license>BSD</license>
<buildtool_depend>catkin</buildtool_depend>
