<?xml version="1.0"?>
<package format="2">
  <name>ros_robot_model</name>
  <version>0.0.0</version>
  <description>robot_modeling</description>

  <license>BSD</license>

  <maintainer email="tamura.kosei905@mail.kyutech.jp">Kose-i</maintainer>
  <author email="tamura.kosei905@mail.kyutech.jp">Kose-i</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
